--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div>Es un memotest, no se que esperas que diga.</div>
             <div>Trata de matchear las cosas y no se, manejate.</div>
             <div>Flexibility, love and trust.</div>
-            <input type="button" class="hidden" value="Reintentar" onclick="nuevoJuego(difficulty)" />
+            <input type="button" value="Reintentar" onclick="nuevoJuego(16)" />
         </div>
         <div class="memotest-container oculto"></div>
         <div class="dificultad"></div>
