changed sizing logic
now depends on rem
included another sidebar

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
         <div class="memotest-container">
         </div>
+        <div class="sidebar2"><img class="ad-bar" src="images/sufuture.jpg"></div>
     </div>
     </div>
     <script src='funciones.js'></script>
