fully translated to english
also fixed some css and logic

--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
 
 <body>
     <div class="container">
-        <div class="header">
-            <h1>Steven Universe.memotest!</h1>
-        </div>
         <div class="sidebar">
-            <p>Es un memotest, no se que esperas que diga.</p>
-            <p>Trata de matchear las cosas y no se, manejate.</p>
-            <p>Flexibility, love and trust.</p>
-
-            <input type="button" class="reintentar" value="Reintentar" onclick="nuevoJuego(juego.dificultad)" />
+            <p>Oh no! Everybody's been turned into cards by the evil gem Blue Topaz!</p>
+            <p>Help Connie fix everything by matching two cards with the same gem.</p>
+            <p>And remember to think of just flexibility, love and trust.</p>
+            <input type="button" class="try-again" value="Try again" onclick="newGame(16)" />
         </div>
-        <div class="memotest-container">
+        <div class="main">
+            <img src="https://dummyimage.com/200x200/000/fff">
+            <div class="memotest-container"></div>
         </div>
         <div class="sidebar2"><img class="mockup" src="images/sufuture.jpg"></div>
     </div>
