--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Memotest!</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
-
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
